--- a/faq/why-shopify-no-sales/index.html
+++ b/faq/why-shopify-no-sales/index.html
@@ -37,19 +37,18 @@
   </header>  <main>
     <h1>Why isn’t my Shopify store getting any sales?</h1><p>You launched, you waited, and still—crickets. Before you blame the algorithm or give up on ecommerce altogether, let’s get honest about what’s really blocking the orders.</p>
 
-<h2>55-Word Snippet</h2>
 <p>Your Shopify store isn’t getting sales because you’re attracting mismatched traffic, failing to prove trust quickly, and sending shoppers through a leaky checkout funnel. Audit your top traffic source, rewrite your value proposition in one headline, add social proof, optimize mobile speed, and follow up abandoned carts within 15 minutes for an immediate uplift today.</p>
 
 <hr>
 
 <h2>1. Traffic ≠ Intent</h2>
-<p>“Shopify no sales after launch” is the cry of stores buying TikTok views instead of buyer intent. Check Google Analytics: if 80 % of visitors bounce in under 10 seconds, your ads or SEO keywords are off-target. Double-down on queries like “why isn’t my Shopify store getting any sales”—people already hunting for solutions—and build content around them.</p>
+<p>“Shopify no sales after launch” is the cry of stores buying TikTok views instead of buyer intent. Check Google Analytics: if 80 % of visitors bounce in under 10 seconds, your ads or SEO keywords are off-target. Double down on queries like “why isn’t my Shopify store getting any sales people already hunting for solutions and build content around them.</p>
 
 <h2>2. Offer &amp; Trust Gaps</h2>
 <p>Even warm visitors hesitate when they land on a product page that looks generic. Show a crystal-clear promise above the fold, add one authentic review with a photo, and display shipping/return badges. If you’ve been thinking, “Shopify failing, what to do?” start here—conversion lifts often appear overnight once fear is removed.</p>
 
 <h2>3. Funnel Diagnostics (TikTok &amp; Meta Ads)</h2>
-<p>Seeing “TikTok ads not working Shopify” in your reports? Chances are your creative hooks don’t mirror the product page headline. Align them, retarget video viewers for 7 days, and send them to a checkout that loads in &lt;2 seconds. Still asking “why Shopify ads not converting”? Test a one-product landing page—simpler flows win.</p>
+<p>Seeing “TikTok ads not working Shopify” in your reports? Chances are your creative hooks don’t mirror the product page headline. Align them, retarget video viewers for 7 days, and send them to a checkout that loads in &lt;2 seconds. Still asking “why Shopify ads not converting”? Test a one-product landing page simpler flows win.</p>
 
 <hr>
 
@@ -57,7 +56,7 @@
 <ol>
   <li>Run a 60-second mobile speed test (GTmetrix).</li>
   <li>Rewrite your hero headline to answer one burning pain in 12 words or less.</li>
-  <li>Embed three UGC videos above the add-to-cart button—people trust peers.</li>
+  <li>Embed three UGC videos above the add-to-cart button people trust peers.</li>
   <li>Install an abandoned-cart email/SMS with a 15-minute trigger + 10 % code.</li>
   <li>Track sessions-to-checkout in GA4 weekly; aim for 4 %+ as a first milestone.</li>
 </ol>
