--- a/faq/is-shopify-too-saturated/index.html
+++ b/faq/is-shopify-too-saturated/index.html
@@ -12,7 +12,7 @@
   <meta property="og:description" content="Discover why Shopify saturation is a myth and how to dominate ecommerce in 2025 with personal branding, AI, and trust-first funnels." />
   <meta property="og:url" content="https://freelankarx.com/blog/is-shopify-too-saturated" />
   <meta property="og:image" content="https://freelankarx.com/assets/toolkit-preview.jpg" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png" />
 
   <!-- Responsive Branding -->
   <style>
@@ -33,7 +33,7 @@
 <body>
   <header>
     <a href="/" style="display:flex;align-items:center">
-      <img src="/logo.png" alt="Freelankarx Logo" style="height:32px;margin-right:8px">
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/freelankarx%20logo.png" alt="Freelankarx Logo" style="height:32px;margin-right:8px">
       <span style="color:var(--green);font-weight:700;font-size:1.2rem">Freelankarx</span>
     </a>
     <nav>
