--- a/index.html
+++ b/index.html
@@ -109,15 +109,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/73821dffc1925e56088fbaec02702042713ad955/freelankarx_logo-removebg-preview.png" alt="FreelankarX Logo">
       </div>
       <ul>
-        <a href="https;//freelankarx.com/about/">About</a>
+        <a href="/about/">About</a>
         <li><a href="#services">Services</a></li>
-        <a href="https;//freelankarx.com/toolkit.html">Get Free Toolkit</a>
+        <a href="/toolkit.html">Get Free Toolkit</a>
         <li><a href="#recent-results">Recent Results</a></li>
-     
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#pricing">Pricing</a></li>
-       
-        <a href="https;//freelankarx.com/blog/">Blogs</a>
+        <a href="/blog/">Blogs</a>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
