--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/73821dffc1925e56088fbaec02702042713ad955/freelankarx_logo-removebg-preview.png" alt="FreelankarX Logo">
       </div>
       <ul>
-        <li><a href="/about/">About</a></li>
+        <li><a href="/about/"class="active">About</a></li>
         <li><a href="#services">Services</a></li>
-        <li><a href="/toolkit.html">Get Free Toolkit</a></li>
+        <li><a href="/toolkit.html"class="active">Get Free Toolkit</a></li>
         <li><a href="#recent-results">Recent Results</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#pricing">Pricing</a></li>
-        <li><a href="/blog/">Blogs</a></li>
+        <li><a href="/blog/"class="active">Blogs</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
