--- a/faq/what-to-do-after-launch/index.html
+++ b/faq/what-to-do-after-launch/index.html
@@ -132,7 +132,7 @@
 
     <h2>👉 Just Launched Your Store?</h2>
     <p>
-      <a href="https://freelankarx.com/request-site">Request a Free Website Setup</a>  
+      <a href="https://freelankarx.com/free-website.html">Request a Free Website Setup</a>  
       and skip the struggle — we’ll build the foundation for you.
     </p>
   </main>
