--- a/faq/what-to-do-after-launch/index.html
+++ b/faq/what-to-do-after-launch/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="launched shopify store now what, shopify store no sales after launch, free shopify setup, post launch ecommerce strategy, no sales shopify fix" />
   <meta property="og:title" content="I Launched My Shopify Store… Now What?" />
   <meta property="og:description" content="Discover what to do after launching your Shopify store. Get our proven system — free setup, funnel builder, and AI-powered tools." />
-  <meta property="og:url" content="https://freelankarx.com/blog/what-to-do-after-launch" />
+  <meta property="og:url" content="https://freelankarx.com/faq/what-to-do-after-launch" />
   <meta property="og:image" content="https://freelankarx.com/assets/shopify-launch-funnel.jpg" />
   <link rel="icon" href="/favicon.ico" />
 
@@ -95,15 +95,15 @@
     <p>This stage the “what now” moment is where real brands are born. And we’ve helped hundreds of new store owners skip months of confusion by giving them a full post-launch system… for free.</p>
 
     <h3>Real Talk: Shopify Isn’t Plug-and-Play Anymore</h3>
-    <p>In 2025, launching a Shopify store is like setting up a tent. Congrats — now the real journey begins. Without a system for getting attention, converting it, and nurturing it… you’ll just sit there wondering why nothing's working.</p>
+    <p>In 2025, launching a Shopify store is like setting up a tent. Congrats now the real journey begins. Without a system for getting attention, converting it, and nurturing it… you’ll just sit there wondering why nothing's working.</p>
 
     <p><strong>That’s where we come in.</strong> At Freelankarx, we don’t just help you “build a store.” We help you build a system starting with a free website setup tailored to your niche, goals, and audience behavior.</p>
 
     <h3>Here’s What to Do Next (Free Setup Included)</h3>
     <ol>
-      <li><a href="https://freelankarx.com/request-site">Request a Free Custom Shopify Website</a></li>
+      <li><a href="https://freelankarx.com/free-site.html">Request a Free Custom Shopify Website</a></li>
       <li>Get our AI-powered layout, funnel, and copy setup</li>
-      <li>Start running your store like a real business — not a guessing game</li>
+      <li>Start running your store like a real business not a guessing game</li>
     </ol>
 
     <!-- FAQ Schema -->
@@ -132,7 +132,7 @@
 
     <h2>👉 Just Launched Your Store?</h2>
     <p>
-      <a href="https://freelankarx.com/free-website.html">Request a Free Website Setup</a>  
+      <a href="https://freelankarx.com/free-site.html">Request a Free Website Setup</a>  
       and skip the struggle — we’ll build the foundation for you.
     </p>
   </main>
