--- a/project/excellent-cakes-n-more/index.html
+++ b/project/excellent-cakes-n-more/index.html
@@ -98,7 +98,7 @@ h1, h2, h3 {
       <a href="#" class="mx-2 hover:text-pink-500">Facebook</a>
       <a href="#" class="mx-2 hover:text-pink-500">Email</a>
     </div>
-    <p>&copy; 2025 Excellent Cakes N More. All rights reserved.</p>
+    <p>&copy; Design by freelankarx for excellent cakes n more. All rights reserved.</p>
   </footer>  <script>
     const faders = document.querySelectorAll('.fade-in');
     const appearOptions = {
