--- a/project/excellent-cakes-n-more/index.html
+++ b/project/excellent-cakes-n-more/index.html
@@ -54,39 +54,89 @@ h1, h2, h3 {
       <p class="mb-4">Excellent Cakes N More is a Saskatoon-based home bakery specializing in luxury custom cakes for weddings, birthdays, and special occasions. Every design is one-of-a-kind. Every cake tells a story.</p>
       <p class="font-semibold text-pink-700">Starting at $150 for custom cakes | $4.50 per cupcake</p>
     </div>
-  </section>  <!-- Gallery Section -->  <section class="py-16 bg-pink-100 text-center">
+  </section>  <!-- Why Choose Us Section -->  <section class="py-16 px-6 bg-pink-100 text-center">
+    <h2 class="text-3xl text-pink-800 mb-10">Why Choose Us</h2>
+    <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6">
+      <div class="p-4 fade-in">
+        <div class="text-4xl mb-2">🎨</div>
+        <h3 class="text-xl font-semibold mb-2">Artistic Designs</h3>
+        <p>Every cake is a unique work of edible art, custom-made to reflect your vision.</p>
+      </div>
+      <div class="p-4 fade-in">
+        <div class="text-4xl mb-2">🧁</div>
+        <h3 class="text-xl font-semibold mb-2">Premium Ingredients</h3>
+        <p>We use only the finest ingredients for rich flavors and perfect textures.</p>
+      </div>
+      <div class="p-4 fade-in">
+        <div class="text-4xl mb-2">💖</div>
+        <h3 class="text-xl font-semibold mb-2">Made with Love</h3>
+        <p>Our passion for baking shines through in every bite — crafted to delight.</p>
+      </div>
+    </div>
+  </section>  <!-- Gallery Section -->  <section class="py-16 bg-white text-center">
     <h2 class="text-3xl text-pink-800 mb-10">Our Creations</h2>
     <div class="flex flex-wrap justify-center gap-6">
       <img src="https://picsum.photos/seed/cake1/400/400" alt="Cake 1" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />
       <img src="https://picsum.photos/seed/cake2/400/400" alt="Cake 2" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />
       <img src="https://picsum.photos/seed/cake3/400/400" alt="Cake 3" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />
     </div>
-  </section>  <!-- Testimonials Section -->  <section class="py-16 px-6 bg-white text-center">
+  </section>  <!-- Testimonials Section -->  <section class="py-16 px-6 bg-pink-100 text-center">
     <h2 class="text-3xl text-pink-800 mb-10">Happy Clients</h2>
     <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
-      <div class="bg-pink-50 p-6 rounded-lg shadow fade-in">
+      <div class="bg-white p-6 rounded-lg shadow fade-in">
         <p class="italic">“The cake was stunning and delicious — it was the highlight of our wedding! Thank you for making it so special.”</p>
         <p class="mt-4 font-semibold">— Sarah M.</p>
       </div>
-      <div class="bg-pink-50 p-6 rounded-lg shadow fade-in">
+      <div class="bg-white p-6 rounded-lg shadow fade-in">
         <p class="italic">“Excellent Cakes N More never disappoints. Every cake I’ve ordered has been a masterpiece!”</p>
         <p class="mt-4 font-semibold">— Jason L.</p>
       </div>
     </div>
-  </section>  <!-- Contact Section -->  <section id="contact" class="py-16 bg-pink-100 text-center px-6">
+  </section>  <!-- Meet the Baker Section -->  <section class="py-16 px-6 bg-white text-center">
+    <h2 class="text-3xl text-pink-800 mb-6">Meet the Baker</h2>
+    <div class="max-w-3xl mx-auto fade-in">
+      <img src="https://picsum.photos/seed/baker/300/300" alt="Baker" class="rounded-full mx-auto mb-4 shadow-md">
+      <p class="mb-4">Hi! I’m the heart behind Excellent Cakes N More. Baking isn’t just a job — it’s my art and my passion. Every cake I create is infused with joy, care, and a love for making life’s moments unforgettable.</p>
+      <p class="italic">“I believe every cake should be as memorable as the occasion it celebrates.”</p>
+    </div>
+  </section>  <!-- Celebrations Section -->  <section class="py-16 px-6 bg-pink-100 text-center">
+    <h2 class="text-3xl text-pink-800 mb-6">Celebrate With Us</h2>
+    <p class="mb-6">Make every event unforgettable with a luxury cake made just for you.</p>
+    <div class="max-w-4xl mx-auto grid grid-cols-2 md:grid-cols-5 gap-4 text-sm">
+      <div>💍 Weddings</div>
+      <div>🎉 Birthdays</div>
+      <div>👶 Baby Showers</div>
+      <div>🏆 Corporate Events</div>
+      <div>🌸 Just Because</div>
+    </div>
+  </section>  <!-- How It Works Section -->  <section class="py-16 px-6 bg-white text-center">
+    <h2 class="text-3xl text-pink-800 mb-6">How It Works</h2>
+    <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6">
+      <div class="fade-in">
+        <div class="text-3xl mb-2">✨</div>
+        <h3 class="text-lg font-semibold mb-1">1. Fill Out the Order Form</h3>
+        <p>Share your event details and dream design.</p>
+      </div>
+      <div class="fade-in">
+        <div class="text-3xl mb-2">📞</div>
+        <h3 class="text-lg font-semibold mb-1">2. Confirm & Customize</h3>
+        <p>We finalize your cake design, flavors, and delivery.</p>
+      </div>
+      <div class="fade-in">
+        <div class="text-3xl mb-2">🎂</div>
+        <h3 class="text-lg font-semibold mb-1">3. Enjoy Your Cake</h3>
+        <p>Pick up or receive your cake — fresh, beautiful, and delicious.</p>
+      </div>
+    </div>
+  </section>  <!-- Limited Availability Banner -->  <div class="relative bg-pink-200 text-center py-4 px-6 font-semibold text-pink-900 overflow-hidden">
+    <div class="absolute inset-0 bg-pink-200 bg-opacity-80"></div>
+    <p class="relative z-10 text-xl">⚠️ Limited Orders Per Week — Book Early to Secure Your Date</p>
+  </div>  <!-- Contact Section -->  <section id="contact" class="py-16 bg-pink-100 text-center px-6">
     <h2 class="text-3xl text-pink-800 mb-6">Place Your Order</h2>
-    <form class="max-w-xl mx-auto bg-white p-8 rounded-lg shadow-md fade-in">
-      <div class="mb-4">
-        <input type="text" placeholder="Your Name" class="w-full p-3 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300" required />
-      </div>
-      <div class="mb-4">
-        <input type="email" placeholder="Your Email" class="w-full p-3 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300" required />
-      </div>
-      <div class="mb-4">
-        <textarea placeholder="Your Message" rows="4" class="w-full p-3 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-300" required></textarea>
-      </div>
-      <button type="submit" class="bg-pink-200 hover:bg-pink-300 text-gray-800 font-semibold py-2 px-6 rounded-full shadow transition transform hover:scale-105">Send</button>
-    </form>
+    <div class="max-w-xl mx-auto bg-white p-8 rounded-lg shadow-md fade-in">
+      <p class="mb-4 text-lg">Ready to order your custom cake?</p>
+      <a href="https://bit.ly/OrderExcellentCakes" class="bg-pink-200 hover:bg-pink-300 text-gray-800 font-semibold py-3 px-6 rounded-full shadow transition transform hover:scale-105" target="_blank">Order via Form</a>
+    </div>
     <p class="mt-6">📍Based in Saskatoon | Pre-order only</p>
   </section>  <!-- WhatsApp Button -->  <a href="https://wa.me/" class="whatsapp-button" aria-label="Chat on WhatsApp">
     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" width="24" height="24">
@@ -98,7 +148,8 @@ h1, h2, h3 {
       <a href="#" class="mx-2 hover:text-pink-500">Facebook</a>
       <a href="#" class="mx-2 hover:text-pink-500">Email</a>
     </div>
-    <p>&copy; Design by freelankarx for excellent cakes n more. All rights reserved.</p>
+    <p>&copy; 2025 Excellent Cakes N More. All rights reserved.</p>
+    <p class="mt-2">Designed with ❤️ by <a href="https://freelankarx.com" class="text-pink-500 hover:underline" target="_blank">Freelankarx</a></p>
   </footer>  <script>
     const faders = document.querySelectorAll('.fade-in');
     const appearOptions = {
