--- a/project/excellent-cakes-n-more/index.html
+++ b/project/excellent-cakes-n-more/index.html
@@ -138,7 +138,7 @@ h1, h2, h3 {
       <a href="https://bit.ly/OrderExcellentCakes" class="bg-pink-200 hover:bg-pink-300 text-gray-800 font-semibold py-3 px-6 rounded-full shadow transition transform hover:scale-105" target="_blank">Order via Form</a>
     </div>
     <p class="mt-6">📍Based in Saskatoon | Pre-order only</p>
-  </section>  <!-- WhatsApp Button -->  <a href="https://wa.me/" class="whatsapp-button" aria-label="Chat on WhatsApp">
+  </section>  <!-- WhatsApp Button -->  <a href="https://wa.me/16393182171" class="whatsapp-button" aria-label="Chat on WhatsApp">
     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" width="24" height="24">
       <path d="M20.52 3.48A11.9 11.9 0 0012.07.01C5.65.01.52 5.13.52 11.56a11.6 11.6 0 001.58 5.96L.06 24l6.68-2.11a11.82 11.82 0 005.32 1.35h.01c6.42 0 11.56-5.13 11.56-11.55a11.52 11.52 0 00-3.11-7.6zm-8.45 17.9a9.5 9.5 0 01-4.83-1.32l-.35-.2-3.96 1.25 1.29-3.86-.22-.37a9.46 9.46 0 01-1.45-5.07c0-5.26 4.28-9.55 9.55-9.55 2.56 0 4.97 1 6.78 2.82a9.52 9.52 0 012.8 6.74c0 5.27-4.29 9.56-9.56 9.56zm5.28-7.17c-.29-.14-1.72-.85-1.98-.94s-.46-.14-.65.14-.75.94-.93 1.14-.34.21-.63.07a7.79 7.79 0 01-2.29-1.41 8.63 8.63 0 01-1.59-2c-.17-.29 0-.45.13-.59.13-.13.29-.34.43-.51.14-.17.19-.29.29-.48.1-.19.05-.36-.02-.51-.08-.14-.65-1.56-.9-2.14-.24-.57-.49-.5-.65-.51h-.56c-.2 0-.52.07-.8.36s-1.05 1.03-1.05 2.52 1.07 2.93 1.22 3.14c.14.19 2.11 3.2 5.1 4.49.71.31 1.27.49 1.7.62.71.23 1.35.2 1.86.12.57-.08 1.72-.7 1.96-1.38.24-.68.24-1.26.17-1.38-.06-.12-.26-.19-.54-.33z" />
     </svg>
