--- a/project/excellent-cakes-n-more/index.html
+++ b/project/excellent-cakes-n-more/index.html
@@ -46,7 +46,7 @@ h1, h2, h3 {
   </style>
 </head><body class="bg-pink-50 text-gray-800">  <!-- Hero Section -->  <section class="h-screen bg-cover bg-center flex flex-col justify-center items-center text-center px-4" style="background-image: url('https://picsum.photos/seed/cakes/1200/800');">
     <h1 class="text-4xl md:text-6xl text-white drop-shadow-lg mb-4">Luxury Custom Cakes for Every Occasion</h1>
-    <p class="text-lg md:text-2xl text-white drop-shadow-md mb-8">Made fresh to order in Saskatoon — let your cake be the statement piece.</p>
+    <p class="text-lg md:text-2xl text-white drop-shadow-md mb-8">Made fresh to order in Saskatoon let your cake be the statement piece.</p>
     <a href="#contact" class="bg-pink-200 hover:bg-pink-300 text-gray-800 font-semibold py-3 px-6 rounded-full shadow-lg transition transform hover:scale-105 animate-bounce">Order Now</a>
   </section>  <!-- About Section -->  <section class="py-16 px-6 text-center bg-white">
     <div class="max-w-3xl mx-auto fade-in">
@@ -70,7 +70,7 @@ h1, h2, h3 {
       <div class="p-4 fade-in">
         <div class="text-4xl mb-2">💖</div>
         <h3 class="text-xl font-semibold mb-2">Made with Love</h3>
-        <p>Our passion for baking shines through in every bite — crafted to delight.</p>
+        <p>Our passion for baking shines through in every bite crafted to delight.</p>
       </div>
     </div>
   </section>  <!-- Gallery Section -->  <section class="py-16 bg-white text-center">
@@ -84,11 +84,11 @@ h1, h2, h3 {
     <h2 class="text-3xl text-pink-800 mb-10">Happy Clients</h2>
     <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
       <div class="bg-white p-6 rounded-lg shadow fade-in">
-        <p class="italic">“The cake was stunning and delicious — it was the highlight of our wedding! Thank you for making it so special.”</p>
+        <p class="italic">⭐⭐⭐⭐⭐“The cake was stunning and delicious it was the highlight of our wedding! Thank you for making it so special.”</p>
         <p class="mt-4 font-semibold">— Sarah M.</p>
       </div>
       <div class="bg-white p-6 rounded-lg shadow fade-in">
-        <p class="italic">“Excellent Cakes N More never disappoints. Every cake I’ve ordered has been a masterpiece!”</p>
+        <p class="italic">⭐⭐⭐⭐⭐“Excellent Cakes N More never disappoints. Every cake I’ve ordered has been a masterpiece!”</p>
         <p class="mt-4 font-semibold">— Jason L.</p>
       </div>
     </div>
@@ -96,7 +96,7 @@ h1, h2, h3 {
     <h2 class="text-3xl text-pink-800 mb-6">Meet the Baker</h2>
     <div class="max-w-3xl mx-auto fade-in">
       <img src="https://picsum.photos/seed/baker/300/300" alt="Baker" class="rounded-full mx-auto mb-4 shadow-md">
-      <p class="mb-4">Hi! I’m the heart behind Excellent Cakes N More. Baking isn’t just a job — it’s my art and my passion. Every cake I create is infused with joy, care, and a love for making life’s moments unforgettable.</p>
+      <p class="mb-4">Hi! I’m the heart behind Excellent Cakes N More. Baking isn’t just a job it’s my art and my passion. Every cake I create is infused with joy, care, and a love for making life’s moments unforgettable.</p>
       <p class="italic">“I believe every cake should be as memorable as the occasion it celebrates.”</p>
     </div>
   </section>  <!-- Celebrations Section -->  <section class="py-16 px-6 bg-pink-100 text-center">
@@ -125,12 +125,12 @@ h1, h2, h3 {
       <div class="fade-in">
         <div class="text-3xl mb-2">🎂</div>
         <h3 class="text-lg font-semibold mb-1">3. Enjoy Your Cake</h3>
-        <p>Pick up or receive your cake — fresh, beautiful, and delicious.</p>
+        <p>Pick up or receive your cake fresh, beautiful, and delicious.</p>
       </div>
     </div>
   </section>  <!-- Limited Availability Banner -->  <div class="relative bg-pink-200 text-center py-4 px-6 font-semibold text-pink-900 overflow-hidden">
     <div class="absolute inset-0 bg-pink-200 bg-opacity-80"></div>
-    <p class="relative z-10 text-xl">⚠️ Limited Orders Per Week — Book Early to Secure Your Date</p>
+    <p class="relative z-10 text-xl">⚠️ Limited Orders Per Week Book Early to Secure Your Date</p>
   </div>  <!-- Contact Section -->  <section id="contact" class="py-16 bg-pink-100 text-center px-6">
     <h2 class="text-3xl text-pink-800 mb-6">Place Your Order</h2>
     <div class="max-w-xl mx-auto bg-white p-8 rounded-lg shadow-md fade-in">
