--- a/project/Cakekulture/index.html
+++ b/project/Cakekulture/index.html
@@ -64,7 +64,7 @@
   </section>  <!-- Gallery Section -->  <section class="py-16 bg-white text-center">
     <h2 class="text-3xl text-yellow-800 mb-10">Our Cake Creations</h2>
     <div class="flex flex-wrap justify-center gap-6">
-      <img src="https://picsum.photos/seed/cakek1/400/400" alt="Cake 1" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/project/Cakekulture/IMG-20250724-WA0015.jpg" alt="Cake 1" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />
       <img src="https://picsum.photos/seed/cakek2/400/400" alt="Cake 2" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />
       <img src="https://picsum.photos/seed/cakek3/400/400" alt="Cake 3" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />
       <img src="https://picsum.photos/seed/cakek4/400/400" alt="Cake 4" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />
