--- a/project/Cakekulture/index.html
+++ b/project/Cakekulture/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cakekulture | Custom Cakes Bedford</title>
-  <meta name="description" content="Discover Cakekulture — Bedford's premier home bakery for luxury custom cakes that taste divine and look stunning. Celebrate life's sweetest moments with a cake made just for you. Order via WhatsApp today!">
+  <meta name="description" content="Discover Cakekulture Bedford's premier home bakery for luxury custom cakes that taste divine and look stunning. Celebrate life's sweetest moments with a cake made just for you. Order via WhatsApp today!">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -45,21 +45,21 @@
 <body class="bg-yellow-50 text-gray-800">
   <!-- Hero Section -->
   <section class="h-screen bg-cover bg-center flex flex-col justify-center items-center text-center px-4" style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://picsum.photos/seed/cakekulture/1200/800');">
-    <h1 class="text-4xl md:text-6xl text-white drop-shadow-lg mb-4">Cakes Made to Impress — Moments Made to Remember</h1>
+    <h1 class="text-4xl md:text-6xl text-white drop-shadow-lg mb-4">Cakes Made to Impress Moments Made to Remember</h1>
     <p class="text-lg md:text-2xl text-white drop-shadow-md mb-8">Crafted in Bedford with love, artistry, and flavors that leave a lasting memory.</p>
     <a href="#contact" class="bg-yellow-200 hover:bg-yellow-300 text-gray-800 font-semibold py-3 px-6 rounded-full shadow-lg transition transform hover:scale-105 animate-bounce">Order Your Cake</a>
   </section>  <!-- About Section -->  <section class="py-16 px-6 text-center bg-white">
     <div class="max-w-3xl mx-auto fade-in">
       <h2 class="text-3xl text-yellow-800 mb-4">Welcome to Cakekulture</h2>
-      <p class="mb-4">Cakekulture is more than a bakery — it's where dreams turn into edible art. Based in Bedford, we create custom cakes for birthdays, weddings, and life's special moments. Our passion is creating unforgettable experiences through cakes that wow visually and taste incredible.</p>
+      <p class="mb-4">Cakekulture is more than a bakery it's where dreams turn into edible art. Based in Bedford, we create custom cakes for birthdays, weddings, and life's special moments. Our passion is creating unforgettable experiences through cakes that wow visually and taste incredible.</p>
       <p class="mb-4 font-semibold text-yellow-700">Pre-order only | DM or WhatsApp to order</p>
-      <p class="italic">"Every cake tells a story — let's make yours unforgettable."</p>
+      <p class="italic">"Every cake tells a story let's make yours unforgettable."</p>
     </div>
   </section>  <!-- Story Section -->  <section class="py-16 px-6 bg-yellow-100 text-center">
-    <h2 class="text-3xl text-yellow-800 mb-6">Meet Adenike — Your Baker</h2>
+    <h2 class="text-3xl text-yellow-800 mb-6">Meet Adenike Your Baker</h2>
     <div class="max-w-3xl mx-auto fade-in">
       <p class="mb-4">Hi, I'm Adenike, founder of Cakekulture. My journey began with a love for baking and a passion for celebrating people. Every cake I create is personal — made with care, creativity, and the desire to make your occasion shine. When you order from Cakekulture, you're not just buying a cake; you're investing in a beautiful memory.</p>
-      <p class="italic">"I bake with purpose — to spread joy, love, and a taste of celebration."</p>
+      <p class="italic">"I bake with purpose to spread joy, love, and a taste of celebration."</p>
     </div>
   </section>  <!-- Gallery Section -->  <section class="py-16 bg-white text-center">
     <h2 class="text-3xl text-yellow-800 mb-10">Our Cake Creations</h2>
@@ -86,15 +86,15 @@
     <div class="max-w-5xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6">
       <div class="p-4 fade-in">
         <h3 class="text-xl font-semibold mb-2">🌟 Stunning Designs</h3>
-        <p>Cakes that make a statement — tailored to your event and style.</p>
+        <p>Cakes that make a statement tailored to your event and style.</p>
       </div>
       <div class="p-4 fade-in">
         <h3 class="text-xl font-semibold mb-2">🍰 Divine Taste</h3>
-        <p>Flavors you'll remember — crafted with premium ingredients.</p>
+        <p>Flavors you'll remember crafted with premium ingredients.</p>
       </div>
       <div class="p-4 fade-in">
         <h3 class="text-xl font-semibold mb-2">💬 Personal Touch</h3>
-        <p>From your first message to the final bite — a seamless, personal experience.</p>
+        <p>From your first message to the final bite a seamless, personal experience.</p>
       </div>
     </div>
   </section>  <!-- Contact Section -->  <section id="contact" class="py-16 bg-yellow-100 text-center px-6">
