--- a/project/Cakekulture/index.html
+++ b/project/Cakekulture/index.html
@@ -58,7 +58,7 @@
   </section>  <!-- Story Section -->  <section class="py-16 px-6 bg-yellow-100 text-center">
     <h2 class="text-3xl text-yellow-800 mb-6">Meet Adenike Your Baker</h2>
     <div class="max-w-3xl mx-auto fade-in">
-      <p class="mb-4">Hi, I'm Adenike, founder of Cakekulture. My journey began with a love for baking and a passion for celebrating people. Every cake I create is personal — made with care, creativity, and the desire to make your occasion shine. When you order from Cakekulture, you're not just buying a cake; you're investing in a beautiful memory.</p>
+      <p class="mb-4">Hi, I'm Adenike, founder of Cakekulture. My journey began with a love for baking and a passion for celebrating people. Every cake I create is personal made with care, creativity, and the desire to make your occasion shine. When you order from Cakekulture, you're not just buying a cake; you're investing in a beautiful memory.</p>
       <p class="italic">"I bake with purpose to spread joy, love, and a taste of celebration."</p>
     </div>
   </section>  <!-- Gallery Section -->  <section class="py-16 bg-white text-center">
