--- a/project/Cakekulture/index.html
+++ b/project/Cakekulture/index.html
@@ -71,7 +71,7 @@
     </div>
   </section>  
 <!-- Gallery Section -->  
-</section> class="py-16 bg-white text-center">
+<section class="py-16 bg-white text-center">
   <h2 class="text-3xl text-yellow-800 mb-10">Our Cake Creations</h2>
   <div class="gallery flex flex-wrap justify-center gap-6">
     <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0015.jpg" alt="Cake 1" loading="lazy" class="rounded-lg shadow-md transform hover:scale-105 transition" />
@@ -79,6 +79,8 @@
     <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0020.jpg" alt="Cake 3" loading="lazy" class="rounded-lg shadow-md transform hover:scale-105 transition" />
     <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0019.jpg" alt="Cake 4" loading="lazy" class="rounded-lg shadow-md transform hover:scale-105 transition" />
   </div>
+</section>
+  
   </section>  <!-- Testimonials Section -->  <section class="py-16 px-6 bg-yellow-100 text-center">
     <h2 class="text-3xl text-yellow-800 mb-10">What Our Clients Say</h2>
     <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
