--- a/project/Cakekulture/index.html
+++ b/project/Cakekulture/index.html
@@ -70,16 +70,14 @@
       <p class="italic">"I bake with purpose to spread joy, love, and a taste of celebration."</p>
     </div>
   </section>  
-<!-- Gallery Section -->  
-<section class="py-16 bg-white text-center">
-  <h2 class="text-3xl text-yellow-800 mb-10">Our Cake Creations</h2>
-  <div class="gallery flex flex-wrap justify-center gap-6">
-    <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0015.jpg" alt="Cake 1" loading="lazy" class="rounded-lg shadow-md transform hover:scale-105 transition" />
-    <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0016.jpg" alt="Cake 2" loading="lazy" class="rounded-lg shadow-md transform hover:scale-105 transition" />
-    <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0020.jpg" alt="Cake 3" loading="lazy" class="rounded-lg shadow-md transform hover:scale-105 transition" />
-    <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0019.jpg" alt="Cake 4" loading="lazy" class="rounded-lg shadow-md transform hover:scale-105 transition" />
-  </div>
-</section>
+  </section>  <!-- Gallery Section -->  <section class="py-16 bg-white text-center">  
+    <h2 class="text-3xl text-yellow-800 mb-10">Our Cake Creations</h2>  
+    <div class="flex flex-wrap justify-center gap-6">  
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0015.jpg" alt="Cake 1" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />  
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0016.jpg" alt="Cake 2" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />  
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0020.jpg" alt="Cake 3" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />  
+      <img src="https://raw.githubusercontent.com/Freelankarx/Freelankarx/main/project/Cakekulture/IMG-20250724-WA0019.jpg" alt="Cake 4" class="rounded-lg shadow-md transform hover:scale-105 transition fade-in" />  
+    </div>
   
   </section>  <!-- Testimonials Section -->  <section class="py-16 px-6 bg-yellow-100 text-center">
     <h2 class="text-3xl text-yellow-800 mb-10">What Our Clients Say</h2>
